--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "alza-ts",
   "type": "module",
   "devDependencies": {
+    "@types/mocha": "^10.0.8",
     "@wdio/appium-service": "^8.36.1",
     "@wdio/cli": "^8.36.1",
     "@wdio/local-runner": "^8.36.1",
