--- a/.github/workflows/ios-main.yml
+++ b/.github/workflows/ios-main.yml
@@ -9,13 +9,10 @@ jobs:
     runs-on: macos-latest
 
     steps:
-      - name: List available devices and runtimes
-        run: xcrun simctl list --json devices available
-    #   - uses: actions/checkout@v3 
-    #   - uses: futureware-tech/simulator-action@v3
-    #     with:
-    #       model: 'iPhone 14'
-    #       os: '17.4'
+      - uses: actions/checkout@v3
+      - uses: futureware-tech/simulator-action@v3
+        with:
+          udid: '99276BE1-7DEA-49AF-BC63-A97CFFA394D7'
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -26,11 +23,12 @@ jobs:
       - name: Install npm packages
         run: npm ci
 
-      - name: setup appium
+      - name: Setup Appium
         run: |
           npm install -g appium@v2
           appium -v
           appium &>/dev/null &
+
 
 
 
