--- a/.github/workflows/ios-main.yml
+++ b/.github/workflows/ios-main.yml
@@ -10,6 +10,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: Show current version of Xcode
+        run: xcodebuild -version
       - uses: futureware-tech/simulator-action@v3
         with:
           udid: '99276BE1-7DEA-49AF-BC63-A97CFFA394D7'
@@ -28,6 +30,8 @@ jobs:
           npm install -g appium@v2
           appium -v
           appium &>/dev/null &
+      - name: Run test
+        run: npx wdio run ./wdio.ios.conf.ts
 
 
 
